heapuse/tests/ui/fail-derive-wrong-attrs-with.stderr
error: heap_size attribute `with` must be followed by a module path, `with = "some::mod"`
 --> tests/ui/fail-derive-wrong-attrs-with.rs:8:17
  |
8 |     #[heap_size(with)]
  |                 ^^^^
