heapuse/tests/ui/fail-derive-wrong-attrs-with.rs
use heapuse_derive::HeapSize;

#[path = "../../examples/allowlisting.rs"]
mod allowlisting;

#[derive(HeapSize)]
pub struct WrongAttr {
    #[heap_size(with)]
    pub a: allowlisting::FullAllow,
}

fn main() {}
